<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".Fotos.subir_foto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/CmdAtras"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:backgroundTint="@color/green_medium"
                android:background="?attr/actionModeCloseDrawable" />

            <TextView
                android:id="@+id/textView61"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="end"
                app:srcCompat="@mipmap/ic_launcher_tges" />

        </LinearLayout>


    <ImageView
        android:id="@+id/IVImagen"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:src="@drawable/sin_imagen"
        android:contentDescription="@string/Foto" />


    <EditText
        android:id="@+id/ETNombreArchivo"
        android:hint="@string/Nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"/>

    <EditText
        android:id="@+id/ETDescripcion"
        android:hint="@string/Descripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/CmdTomar"
            android:background="@drawable/button_ripple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Tomar_Foto"
            />

        <Button
            android:id="@+id/CmdSubir"
            android:background="@drawable/button_ripple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="2dp"
            android:text="@string/Subir_Foto" />


    </LinearLayout>
    </LinearLayout>
</LinearLayout>
