<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_clima"
    tools:context=".EstadoTiempo.Estado_Tiempo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/CmdAtras"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:backgroundTint="@color/white"
            android:background="?attr/actionModeCloseDrawable" />

        <TextView
            android:id="@+id/textView61"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="end"
            app:srcCompat="@mipmap/ic_launcher_tges" />

    </LinearLayout>


    <EditText
        android:id="@+id/ETCiudad"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textColorHint="@color/gray_super_light"
        android:textColor="@color/white"
        android:inputType="textPersonName"
        android:hint="@string/Nombre_ciudad" />

    <EditText
        android:id="@+id/ETPais"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/gray_super_light"
        android:textColor="@color/white"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/Nombre_pais" />

    <Button
        android:id="@+id/CmdObtener"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/button_ripple"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Obtener" />

    <LinearLayout
        android:gravity="center"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/IVClima"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/TVTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="40sp" />

    </LinearLayout>

            <TextView
                android:id="@+id/TVClima"
                android:gravity="center"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>


</ScrollView>